# TRADEXBOT

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  models.py  worker.py
backend/app/api/: routes.py
backend/app/services/: economic_calendar.py  notifier.py  orchestrator.py  pickmytrade.py  signal_engine.py  tradingview_client.py
backend/tradexbot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dashboard/: app.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/lib/: api.js
